# Hackhaton_book

./: .gitignore  CLAUDE.md  EVALUATION_METRICS_INDEX.md  FEATURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAG_EVALUATION_METRICS_RESEARCH.md  RAG_RETRIEVAL_VALIDATION_GUIDE.md  README.md  chatbot-integration.js  chatbot.html  my-website-with-chatbot.html  package-lock.json
backend/: .dockerignore  .env.example  .flake8  .gitignore  COHERE_PIPELINE_README.md  Dockerfile  README.md  final_validation.py  main.py  pyproject.toml  requirements.txt  test_implementation.py  test_retrieval.py
backend/src/: config.py  main.py
backend/src/agents/: __init__.py  rag_agent.py  retrieval_tool.py
backend/src/api/: agent.py  middleware.py  retrieval.py  validation.py
backend/src/api/routes/: __init__.py  health.py  index.py  query.py
backend/src/db/: neon_client.py  qdrant_client.py
backend/src/evaluation/: EXAMPLE_USAGE.md  README.md  __init__.py  benchmark.py  metrics.py
backend/src/models/: __init__.py  agent.py  chunk.py  citation.py  query.py  response.py  retrieval.py  session.py  validation.py
backend/src/services/: agent_service.py  chat_logger.py  content_indexer.py  embedding_service.py  embeddings.py  llm_generation.py  qdrant_service.py  retrieval.py  retrieval_service.py  session_cleanup.py  validation_service.py
backend/src/tasks/: __init__.py  scheduler.py
backend/src/utils/: agent_errors.py  agent_logging.py  errors.py  logging.py
backend/tests/unit/: test_retrieval_service.py
(+164 files in other folders)
